@@ -2110,7 +2110,7 @@ sub bsqr {
 
     $n->bernfrac                   # => BigNum | Nan
 
-The nth-Bernoulli number as an exact fraction, computed with an
+Returns the nth-Bernoulli number C<B_n> as an exact fraction, computed with an
 improved version of Seidel's algorithm, starting with C<bernfrac(0) = 1>.
 
 For n >= 50, a more efficient algorithm is used, based on Zeta(n).
@@ -2193,6 +2193,96 @@ sub bernfrac {
 
     my $r = Math::GMPq::Rmpq_init();
     Math::GMPq::Rmpq_set_num($r, $D[$h - 1]);
+    Math::GMPq::Rmpq_set_den($r, $den);
+    Math::GMPq::Rmpq_canonicalize($r);
+
+    bless \$r, __PACKAGE__;
+}
+
+=head2 harmfrac
+
+    $n->harmfrac                   # => BigNum | Nan
+
+Returns the nth-Harmonic number C<H_n>. The harmonic numbers are the sum of
+reciprocals of the first C<n> natural numbers: C<1 + 1/2 + 1/3 + ... + 1/n>.
+
+For values greater than 7000, binary splitting (Fredrik Johansson's elegant formulation) is used.
+
+=cut
+
+sub harmfrac {
+    my ($n) = @_;
+
+    my $ui = CORE::int(Math::GMPq::Rmpq_get_d($$n));
+
+    $ui || return zero();
+    $ui < 0 and return nan();
+
+    # Use binary splitting for large values of n. (by Fredrik Johansson)
+    # http://fredrik-j.blogspot.ro/2009/02/how-not-to-compute-harmonic-numbers.html
+    if ($ui > 7000) {
+
+        my $num = Math::GMPz::Rmpz_init_set_ui(1);
+
+        my $den = Math::GMPz::Rmpz_init();
+        Math::GMPz::Rmpz_set_q($den, $$n);
+        Math::GMPz::Rmpz_add_ui($den, $den, 1);
+
+        my $temp = Math::GMPz::Rmpz_init();
+
+        # Inspired by Dana Jacobsen's code from Math::Prime::Util::{PP,GMP}.
+        #   https://metacpan.org/pod/Math::Prime::Util::PP
+        #   https://metacpan.org/pod/Math::Prime::Util::GMP
+        my $sub;
+        $sub = sub {
+            my ($num, $den) = @_;
+            Math::GMPz::Rmpz_sub($temp, $den, $num);
+
+            if (Math::GMPz::Rmpz_cmp_ui($temp, 1) == 0) {
+                Math::GMPz::Rmpz_set($den, $num);
+                Math::GMPz::Rmpz_set_ui($num, 1);
+            }
+            elsif (Math::GMPz::Rmpz_cmp_ui($temp, 2) == 0) {
+                Math::GMPz::Rmpz_set($den, $num);
+                Math::GMPz::Rmpz_mul_2exp($num, $num, 1);
+                Math::GMPz::Rmpz_add_ui($num, $num, 1);
+                Math::GMPz::Rmpz_addmul($den, $den, $den);
+            }
+            else {
+                Math::GMPz::Rmpz_add($temp, $num, $den);
+                Math::GMPz::Rmpz_tdiv_q_2exp($temp, $temp, 1);
+                my $q = Math::GMPz::Rmpz_init_set($temp);
+                my $r = Math::GMPz::Rmpz_init_set($temp);
+                $sub->($num, $q);
+                $sub->($r,   $den);
+                Math::GMPz::Rmpz_mul($num,  $num, $den);
+                Math::GMPz::Rmpz_mul($temp, $q,   $r);
+                Math::GMPz::Rmpz_add($num, $num, $temp);
+                Math::GMPz::Rmpz_mul($den, $den, $q);
+            }
+        };
+
+        $sub->($num, $den);
+
+        my $q = Math::GMPq::Rmpq_init();
+        Math::GMPq::Rmpq_set_num($q, $num);
+        Math::GMPq::Rmpq_set_den($q, $den);
+        Math::GMPq::Rmpq_canonicalize($q);
+
+        return bless \$q, __PACKAGE__;
+    }
+
+    my $num = Math::GMPz::Rmpz_init_set_ui(1);
+    my $den = Math::GMPz::Rmpz_init_set_ui(1);
+
+    for (my $k = 2 ; $k <= $ui ; ++$k) {
+        Math::GMPz::Rmpz_mul_ui($num, $num, $k);    # num = num * k
+        Math::GMPz::Rmpz_add($num, $num, $den);     # num = num + den
+        Math::GMPz::Rmpz_mul_ui($den, $den, $k);    # den = den * k
+    }
+
+    my $r = Math::GMPq::Rmpq_init();
+    Math::GMPq::Rmpq_set_num($r, $num);
     Math::GMPq::Rmpq_set_den($r, $den);
     Math::GMPq::Rmpq_canonicalize($r);
 
@@ -3745,7 +3835,7 @@ sub zeta {
 
     $n->bernreal                   # => BigNum | Nan
 
-The nth-Bernoulli number as a floating-point value, with C<bernreal(0) = 1>.
+Returns the nth-Bernoulli number, as a floating-point approximation, with C<bernreal(0) = 1>.
 
 Returns Nan for negative values of C<n>.
 
@@ -3779,6 +3869,34 @@ sub bernreal {
     Math::MPFR::Rmpfr_neg($f, $f, $ROUND) if $n % 4 == 0;
 
     _mpfr2big($f);
+}
+
+=head2 harmreal
+
+    $n->harmreal                   # => BigNum | Nan
+
+Returns the nth-Harmonic number, as a floating-point approximation, for any real value of C<n> >= 0.
+
+Defined as:
+
+    harmreal(n) = digamma(n+1) + gamma
+
+where C<gamma> is the Euler-Mascheroni constant.
+
+=cut
+
+sub harmreal {
+    my ($n) = @_;
+
+    $n = _big2mpfr($n);
+    Math::MPFR::Rmpfr_add_ui($n, $n, 1, $ROUND);
+    Math::MPFR::Rmpfr_digamma($n, $n, $ROUND);
+
+    my $y = Math::MPFR::Rmpfr_init2($PREC);
+    Math::MPFR::Rmpfr_const_euler($y, $ROUND);
+    Math::MPFR::Rmpfr_add($n, $n, $y, $ROUND);
+
+    _mpfr2big($n);
 }
 
 =head2 erf
