@@ -2,6 +2,13 @@ Revision history for Math-BigNum
 
 0.16    2016-xx-xx
 
+        [ADDED]
+
+        - Added two methods for computing the nth-Harmonic number:
+
+            + harmfrac(n)
+            + harmreal(n)
+
         [BUG FIXES]
 
         - Using threads in some parts of the program, will no longer cause a segmentation fault.
